fix(weather): today forecast vertical align

--- a/src/main.css
+++ b/src/main.css
@@ -149,7 +149,7 @@ body[data-page="home"].is-icon-active #journals .journal-item:first-of-type h1.t
     bottom: 4px;
     left: 0;
     display: flex;
-    align-items: flex-end;
+    align-items: center;
     width: calc(var(--widgetsCalendarWidth) * 0.93);
     text-shadow: 1px 1px 0px rgba(var(--widgetsBgColor), 0.8);
     font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica, Arial, sans-serif,
